tests/baselines/reference/tooManyTypeParameters1.errors.txt
==== tests/cases/compiler/tooManyTypeParameters1.ts (4 errors) ====
    function f<T>() { }
    f<string, string>();
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    
    var x = <T>() => {};
    x<number,number>();
    ~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    
    class C<T> {}
    var c = new C<Date,Date>();
            ~~~~~~~~~~~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    
    interface I<T> {}
    var i: I<number,number>;
           ~~~~~~~~~~~~~~~~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).